2012-07-09  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-mua-annotate-sender)
	(bbdb-mua-annotate-recipients, bbdb-mua-edit-field)
	(bbdb-mua-edit-field-sender, bbdb-mua-edit-field-recipients): New arg
	update-p.
	(bbdb-mua-edit-field-interactive): Handle arg update-p.

2012-07-08  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-update-records): Fix previous patch.

2012-07-08  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-update-records): Make records a list
	ordered like address-list.

2012-07-06  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-complete-mail): Use window-live-p.

2012-07-06  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-mua-edit-field): Revert previous change.
	Do not use hard-coded bindings for user variables.

2012-07-06  Sam Steingold  <sds@gnu.org>
	* lisp/bbdb-com.el (bbdb-complete-mail): Use `quit-window' instead
	of `bury-buffer' to get rid of *Completions*.

2012-07-06  Sam Steingold  <sds@gnu.org>
	* lisp/bbdb-mua.el (bbdb-mua-edit-field): Edit THE record for THE
	sender, not all the relevant records.

2012-07-03  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-record-name, bbdb-record-name-lf): Fix
	docstring.
	* lisp/bbdb-com.el (bbdb-search): Also search last_first names.
	Fix docstring.
	(bbdb-message-search): Fix docstring.

2012-07-01  Sam Steingold  <sds@gnu.org>
	* lisp/bbdb-mua.el (bbdb-get-address-components): name may be nil.

2012-07-01  Sam Steingold  <sds@gnu.org>
	* .gitignore: ignore Makefiles and configure files;
	bbdb-autoloads.el -> bbdb-loaddefs.el.

2012-06-24  Sam Steingold  <sds@gnu.org>
	* lisp/bbdb-mua.el (bbdb-update-records): Use bbdb-message-search
	instead of bbdb-search when `update-p' is `search' so that all
	senders are displayed.
	* lisp/bbdb-mua.el (bbdb-annotate-message): Do not offer to
	replace the name if it is already an AKA.

	* lisp/bbdb.el (bbdb-label-completion-list): Use symbol-value
	instead of eval for symbols.