@@ -1,3 +1,12 @@
+2012-07-12  Roland Winkler  <winkler@gnu.org>
+	* lisp/bbdb-mua.el (bbdb-get-address-components)
+	(bbdb-message-get-cache, bbdb-message-set-cache)
+	(bbdb-message-rem-cache, bbdb-mua-annotate-sender)
+	(bbdb-mua-annotate-recipients, bbdb-mua-edit-field)
+	(bbdb-canonical-hosts, bbdb-canonicalize-mail-1)
+	(bbdb-mail-redundant-p, bbdb-delete-redundant-mails)
+	(bbdb-message-clean-name-default): Fix docstring.
+
 2012-07-09  Roland Winkler  <winkler@gnu.org>
 	* lisp/bbdb-mua.el (bbdb-mua-annotate-sender)
 	(bbdb-mua-annotate-recipients, bbdb-mua-edit-field)
